web_src/css/base.css
/* ... */
.ui.floating.dropdown .overflow.menu .scrolling.menu.items {
  border-radius: 0 !important;
  box-shadow: none !important;
  border-bottom: 1px solid var(--color-secondary);
}

.user-menu > .item {
  width: 100%;
  border-radius: 0 !important;
}

.scrolling.menu .item.selected {
  font-weight: var(--font-weight-semibold) !important;
}

.ui.dropdown .scrolling.menu {
  border-color: var(--color-secondary);
}

.color-preview {
  display: inline-block;
  margin-left: 0.4em;
  height: 0.67em;
  width: 0.67em;
  border-radius: var(--border-radius);
}

.attention-icon {
  margin: auto 0.5em auto 0;
}

.attention-title {
  align-items: center;
  display: flex;
}

blockquote.attention-note {
  border-left-color: var(--color-blue-dark-1);
}
strong.attention-note, svg.attention-note {
  color: var(--color-blue-dark-1);
}

blockquote.attention-tip {
  border-left-color: var(--color-success-text);
}
strong.attention-tip, svg.attention-tip {
  color: var(--color-success-text);
}

blockquote.attention-important {
  border-left-color: var(--color-violet-dark-1);
}
strong.attention-important, svg.attention-important {
  color: var(--color-violet-dark-1);
}

blockquote.attention-warning {
  border-left-color: var(--color-warning-text);
}
strong.attention-warning, svg.attention-warning {
  color: var(--color-warning-text);
}

blockquote.attention-caution {
  border-left-color: var(--color-red-dark-1);
}
strong.attention-caution, svg.attention-caution {
  color: var(--color-red-dark-1);
}

.center:not(.popup) {
  text-align: center;
}

overflow-menu {
  border-bottom: 1px solid var(--color-secondary) !important;
  display: flex;
}

overflow-menu .overflow-menu-items {
  display: flex;
  flex: 1;
}

overflow-menu .overflow-menu-items .item {
  margin-bottom: 0 !important; /* reset fomantic's margin, because the active menu has special bottom border */
  height: 100%;
}

overflow-menu .overflow-menu-items .item > .svg {
  align-self: center;
}

overflow-menu .ui.label {
  margin-left: 7px !important; /* save some space */
}

.activity-bar-graph {
  background-color: var(--color-primary);
  color: var(--color-primary-contrast);
}

.archived-icon {
  color: var(--color-secondary-dark-2) !important;
}

.oauth2-authorize-application-box {
  margin-top: 3em !important;
}

/* multiple radio or checkboxes as inline element */
.inline-grouped-list {
  display: inline-block;
  vertical-align: top;
}

.inline-grouped-list > .ui {
  display: block;
  margin-top: 5px;
  margin-bottom: 10px;
}

.inline-grouped-list > .ui:first-child {
  margin-top: 1px;
}

.ui.menu .item > .label {
  background: var(--color-label-bg);
  color: var(--color-label-text);
}

.ui.menu .active.item > .label,
.ui.menu.tabs-with-labels .item:hover > .label {
  background: var(--color-label-bg-alt, var(--color-label-bg));
}

.lines-blame-btn {
  padding: 0 0 0 5px;
  display: flex;
  justify-content: center;
}

.lines-num {
  padding: 0 8px;
  text-align: right !important;
  color: var(--color-text-light-2);
  width: 1%;
  font-family: var(--fonts-monospace);
}

.lines-num span.bottom-line::after {
  border-bottom: 1px solid var(--color-secondary);
}

.lines-num span::after {
  content: attr(data-line-number);
  line-height: 20px !important;
  padding: 0 10px;
  cursor: pointer;
  display: block;
}

.lines-type-marker {
  vertical-align: top;
}

.lines-num,
.lines-code {
  font-size: 12px;
  font-family: var(--fonts-monospace);
  line-height: 20px;
  padding-top: 0;
  padding-bottom: 0;
  vertical-align: top;
}

.lines-num pre,
.lines-code pre,
.lines-num ol,
.lines-code ol {
  background-color: inherit;
  margin: 0;
  padding: 0 !important;
}

.lines-num pre li,
.lines-code pre li,
.lines-num ol li,
.lines-code ol li {
  display: block;
  width: calc(100% - 1ch);
  padding-left: 1ch;
}

.code-inner {
  font: 12px var(--fonts-monospace);
  white-space: pre-wrap;
  word-break: break-all;
  overflow-wrap: anywhere;
  line-height: inherit; /* needed for inline code preview in markup */
}

.blame .code-inner {
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.lines-commit {
  vertical-align: top;
  color: var(--color-text-light-1);
  padding: 0 !important;
  width: 1%;
}

.lines-commit .blame-info {
  width: min(26vw, 300px);
  display: block;
  padding: 0 0 0 6px;
  line-height: 20px;
  box-sizing: content-box;
}

.lines-commit .blame-info .blame-data {
  display: flex;
  font-family: var(--fonts-regular);
}

.lines-commit .blame-info .blame-data .blame-message {
  flex-grow: 2;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.lines-commit .blame-info .blame-data .blame-time,
.lines-commit .blame-info .blame-data .blame-avatar {
  flex-shrink: 0;
}

.blame-avatar {
  display: flex;
  align-items: center;
  margin-right: 4px;
}

.top-line-blame {
  border-top: 1px solid var(--color-secondary);
}

.code-view tr.top-line-blame:first-of-type {
  border-top: none;
}

.lines-code .bottom-line,
.lines-commit .bottom-line {
  border-bottom: 1px solid var(--color-secondary);
}

.code-view {
  background: var(--color-code-bg);
  border-radius: var(--border-radius);
}

.code-view table {
  width: 100%;
}

.color-icon {
  display: inline-block;
  border-radius: var(--border-radius-full);
  height: 14px;
  width: 14px;
}

.rss-icon {
  display: inline-flex;
  color: var(--color-text-light-1);
}

table th[data-sortt-asc]:hover,
table th[data-sortt-desc]:hover {
  background: var(--color-hover) !important;
  cursor: pointer !important;
}

table th[data-sortt-asc] .svg,
table th[data-sortt-desc] .svg {
  margin-left: 0.25rem;
}

.ui.dropdown .menu .item {
  border-radius: 0;
}

.ui.dropdown .menu .item:first-of-type {
  border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.ui.dropdown .menu .item:last-of-type {
  border-radius: 0 0 var(--border-radius) var(--border-radius);
}

.ui.multiple.dropdown > .label {
  box-shadow: 0 0 0 1px var(--color-secondary) inset;
}
/* ... */

